syntax = "proto3";

package rode.v1alpha1;

option go_package = "github.com/rode/rode/proto/v1alpha1";

import "proto/v1alpha1/rode-policy.proto";
import "proto/v1beta1/grafeas.proto";

service Rode {
  // Create occurrences 
  rpc BatchCreateOccurrences(BatchCreateOccurrencesRequest) returns (BatchCreateOccurrencesResponse) {}
  // Verify that an artifact satisfies a policy
  rpc EvaluatePolicy(EvaluatePolicyRequest) returns (EvaluatePolicyResponse) {}
}

// Request to create occurrences in batch.
message BatchCreateOccurrencesRequest {
  // The occurrences to create.
  repeated grafeas.v1beta1.Occurrence occurrences = 1;
}

// Response for creating occurrences in batch.
message BatchCreateOccurrencesResponse {
  // The occurrences that were created.
  repeated grafeas.v1beta1.Occurrence occurrences = 1;
}
